syntax = "proto3";

package bridge;

import "google/protobuf/struct.proto";

option go_package = ".;bridge";

// İlk servis: Snapshot key'lerini döner
service SnapshotKeyService {
  rpc GetSnapshotKeys(Empty) returns (SnapshotKeyList);
}

// İkinci servis: Belirli bir key için kaynakları döner
service SnapshotResourceService {
  rpc GetSnapshotResources(SnapshotKey) returns (SnapshotResourceList);
}

service PokeService { rpc Poke(PokeRequest) returns (PokeResponse); }

message PokeRequest {
  string nodeID = 1;
  string project = 2;
}

message PokeResponse { string message = 1; }

message Empty {}

message SnapshotKey { string key = 1; }

message SnapshotKeyList { repeated string keys = 1; }

message SnapshotResource {
  string type = 1;
  google.protobuf.Struct data = 2;
}

message SnapshotResourceList {
  repeated SnapshotResource resources = 1;
  int64 num_watches = 2;
  string last_watch = 3;
}